<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_top_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user_13" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fp_tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/fp_tv_fetchid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fp_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/fp_tv_fetchusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fp_tv_emailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailid"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/fp_tv_fetchemailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fp_tv_mobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobileno"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/fp_tv_fetchmobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fp_tv_designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designation"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/fp_tv_fetchdesignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

</LinearLayout>