<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_top_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user_13" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/tv_fetchid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/tv_fetchusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_emailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailid"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/tv_fetchemailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_mobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobileno"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/tv_fetchmobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designation"
            android:textSize="@dimen/user_profile_text_size" />

        <TextView
            android:id="@+id/tv_fetchdesignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_top_margin">

        <Button
            android:padding="@dimen/btn_padding"
            android:textSize="@dimen/btn_text_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Edit Profile"
            android:layout_gravity="center"
            android:id="@+id/btn_editprofile" />
    </LinearLayout>

</LinearLayout>