<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_top_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user_13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nr_tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/user_profile_text_size" />

        <EditText
            android:id="@+id/nr_et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nr_tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="@dimen/user_profile_text_size" />

        <EditText
            android:id="@+id/nr_et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/user_profile_text_size"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nr_tv_emailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailid"
            android:textSize="@dimen/user_profile_text_size" />

        <EditText
            android:id="@+id/nr_et_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nr_tv_mobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobileno"
            android:textSize="@dimen/user_profile_text_size" />

        <EditText
            android:id="@+id/nr_et_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/user_profile_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nr_tv_designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designation"
            android:textSize="@dimen/user_profile_text_size" />

        <Spinner
            android:id="@+id/nr_dd_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_gravity="center"
            android:id="@+id/nr_btn_upload"
            android:textSize="@dimen/btn_text_size"
            android:padding="@dimen/btn_padding"/>
    </LinearLayout>

</LinearLayout>